--- a/css/extends.css
+++ b/css/extends.css
@@ -1,9 +1,9 @@
 @import './variables.css';
-@import './globals.css';
+@import './globais.css';
 
 @import './components/navbar.css';
 @import './components/header.css';
 @import './components/about.css';
-@import './components/skills.css';
+@import './components/skilss.css';
 @import './components/projects.css';
 @import './components/footer.css';
